--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
     <div class="h-screen w-screen bg-gray-800 flex flex-col justify-center items-center">
 
             <button type="button" onclick="selectStation()" class="choose-station py-2 px-4 bg-green-500 text-white w-2/3 font-semibold rounded-lg shadow-md hover:bg-green-600 focus:outline-none" >
-                Escolher estação
+                Gerar estação
             </button>
 
             <h1 class="current-station text-white text-3xl mt-5"></h1>
